<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="3"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/store_label"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown" />

        <TextView
            android:id="@+id/store_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Cipadung"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/brown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="5"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/location_label"
            android:layout_weight="3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown" />

        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_on_maps"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/brown" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/see_menu"

        android:textColor="@color/white"
        android:backgroundTint="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:onClick="seeMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>